# UFMG_comp_grafica

./: CMakeLists.txt
include/shaders/: shader.hpp
resources/shaders/: testing.fs  testing.vs
src/: main.cpp
src/display/: game_window.cpp
src/shaders/: shader.cpp
